@@ -55,7 +55,8 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
     including trove updates and erases.
     """
     def __init__(self, cfg = None, passwordPrompter = None,
-                 resolverClass=resolve.DependencySolver):
+                 resolverClass=resolve.DependencySolver,
+                 entitlements = {}):
         """
         @param cfg: a custom L{conarycfg.ConaryConfiguration object}.
                     If None, the standard Conary configuration is loaded
@@ -70,7 +71,9 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
 
         self.cfg = cfg
         self.db = database.Database(cfg.root, cfg.dbPath)
-        self.repos = self.createRepos(self.db, cfg, passwordPrompter)
+        self.repos = self.createRepos(self.db, cfg,
+                                      passwordPrompter = passwordPrompter,
+                                      entitlements = entitlements)
         log.openSysLog(self.cfg.root, self.cfg.logFile)
 
         if not resolverClass:
@@ -78,7 +81,8 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
 
         self.resolver = resolverClass(self, cfg, self.repos, self.db)
 
-    def createRepos(self, db, cfg, passwordPrompter=None, userMap=None):
+    def createRepos(self, db, cfg, passwordPrompter=None, userMap=None,
+                    entitlements={}):
         if self.repos:
             if passwordPrompter is None:
                 passwordPrompter = self.repos.getPwPrompt()
@@ -98,7 +102,8 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
                                        downloadRateLimit =
                                           cfg.downloadRateLimit,
                                        uploadRateLimit =
-                                          cfg.uploadRateLimit)
+                                          cfg.uploadRateLimit,
+                                       entitlements = entitlements)
 
     def getRepos(self):
         return self.repos
